--- a/index.html
+++ b/index.html
@@ -20,6 +20,48 @@
     <title>Portfólio Generation Brasil</title>
 </head>
 <body>
+
+    <!--Cabeçalho -->
+    <header>
+        <div class="menu-content">
+
+            <a href="index.html" id="titulo">Portifólio</a>
+
+            <nav>
+                <ul class="menu-list">
+                    <li><a href="#hero">Início</a></li>
+                    <li><a href="#about">Sobre</a></li>
+                    <li><a href="#projects">Projetos</a></li>
+                    <li><a href="#contact">Contatos</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <!-- Principal-->
+    <main>
+        <section id="hero">
+
+        </section>
+
+        <section id="about">
+
+        </section>
+
+        <section id="projects">
+
+        </section>
+
+        <section id="contact">
+
+        </section>
+
+    </main>
+
+    <!-- Rodapé -->
+    <footer>
+
+    </footer>
     
 </body>
 </html>
