--- a/index.html
+++ b/index.html
@@ -40,7 +40,21 @@
 
     <!-- Principal-->
     <main>
-        <section id="hero">
+        <section id="hero" class="section-container hero-container">
+            <article class="hero-content">
+                <span>👋 Olá, Eu sou o @Devisaias</span>
+                <h1>Desenvolvedor FullStack</h1>
+                <p>Tranformo ideias em códigos e código em dinheiro no seu bolso!</p>
+
+                <div class="buttons-container">
+                    <a href="#contact" class="botao">Entre em contato</a>
+                    <a href="about" class="botao-outline">Saiba Mais</a>
+                </div>
+            </article>
+
+            <figure class="hero-image">
+                <img src="./assets/img/avatar_dev_man.svg" alt="Foto do autor." class="float-animation">
+            </figure>
 
         </section>
 
