--- a/index.html
+++ b/index.html
@@ -58,7 +58,45 @@
 
         </section>
 
-        <section id="about">
+        <section id="about" class="section-container about-container">
+            <figure class="about-image">
+                <img src="./assets/img/avatar_dev_man.svg" alt="Foto do perfil">
+            </figure>
+
+            <article class="about-content">
+                <h2>Sobre mim</h2>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                    Autem ut voluptatum eveniet. Maiores asperiores quaerat ipsam 
+                    consequuntur quis quos, tempora in explicabo eum ratione id 
+                    commodi voluptates, dolorem, doloremque iste?
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Excepturi nisi, illo officia hic quae omnis dolorem provident. 
+                    Dolorem, rem ratione? Dolor molestias nihil illum veniam laborum 
+                    maiores eos harum dicta.
+                </p>
+
+                <div class="about-buttons-data">
+                    <div class="buttons-container">
+                        <a href="#" target="_blank" class="botao">GitHub</a>
+                        <a href="#" target="_blank" class="botao-outline">Currículo</a>
+                    </div>
+
+                    <div>
+                        <div>
+                            <span class="data-number">100</span>
+                        <span class="data-label">Seguidores</span>
+                        </div>
+                        <div>
+                            <span class="data-number">10</span>
+                            <span class="data-label">Repositórios</span>
+                        </div>
+                    </div>
+                </div>
+
+            </article>
 
         </section>
 
