css header, sections: hero and success

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
 	
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,6 +20,7 @@
 
     <link rel="icon" type="image/svg+xml" href="./assets/img/favicon.svg">
 
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Portfólio Generation Brasil</title>
 </head>
 <body>
@@ -53,7 +57,7 @@
             </article>
 
             <figure class="hero-image">
-                <img src="./assets/img/avatar_dev_man.svg" alt="Foto do autor." class="float-animation">
+                <img src="./assets/img/foto_dev_man.svg" alt="Foto do autor." class="float-animation">
             </figure>
 
         </section>
